@@ -4,14 +4,13 @@
 # simple Ttk widgets, such as labels, labelframes, buttons, checkbuttons and
 # radiobuttons.
 #
-# RCS: @(#) $Id: ttkbut.tcl,v 1.4 2007/12/13 15:27:07 dgp Exp $
+# RCS: @(#) $Id: ttkbut.tcl,v 1.5 2008/12/11 18:13:08 jenglish Exp $
 
 if {![info exists widgetDemo]} {
     error "This script should be run from the \"widget\" demo."
 }
 
 package require Tk
-package require Ttk
 
 set w .ttkbut
 catch {destroy $w}
