@@ -10,12 +10,11 @@ exec wish "$0" "$@"
 # separate ".tcl" files is this directory, which are sourced by this script as
 # needed.
 #
-# RCS: @(#) $Id: widget,v 1.51 2008/03/11 22:30:17 das Exp $
+# RCS: @(#) $Id: widget,v 1.52 2008/12/11 18:13:08 jenglish Exp $
 
 package require Tcl	8.5
 package require Tk	8.5
 package require msgcat
-package require Ttk
 
 eval destroy [winfo child .]
 set tk_demoDirectory [file join [pwd] [file dirname [info script]]]
